Fix k-upload-status-total alignment in old IE browsers

--- a/styles/web/common/upload.less
+++ b/styles/web/common/upload.less
@@ -96,6 +96,13 @@ html .k-upload
     transform: translateY(-50%);
 }
 
+.k-ie8,
+.k-ie9 {
+    .k-dropzone .k-upload-status-total {
+        top: 1.5em;
+    }
+}
+
 .k-upload .k-clear-selected ,
 .k-upload .k-upload-selected {
     display: inline-block;
